# gitea-ci-autoscaler

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: cd.yml  ci.yml
src/: cloud_init.rs  config.rs  gitea.rs  hetzner.rs  k8s.rs  main.rs  metrics.rs  mocks.rs  node_manager.rs  reconcile.rs
